modif fichier html (src js)

--- a/ProjetJS/snake.html
+++ b/ProjetJS/snake.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title>Snake Game</title>
+   <title>Le snake de nous</title>
+   <script type="text/javascript" src="newSnake.js"></script>
   </head>
   
   <body>
-    Welcome to Snake!
+  	<canvas id="snakeCanvas" width="500" height="500"></canvas>
   </body>
 </html>
