ajout du serpent dans un canvas

--- a/ProjetJS/snake.html
+++ b/ProjetJS/snake.html
@@ -2,9 +2,9 @@
 <html>
   <head>
    <title>Le snake de nous</title>
+      <meta charset="utf-8"/>
    <script type="text/javascript" src="newSnake.js"></script>
   </head>
-  
   <body>
   	<canvas id="snakeCanvas" width="500" height="500"></canvas>
   </body>
