ajout du css + mouvement serpent

--- a/ProjetJS/snake.html
+++ b/ProjetJS/snake.html
@@ -3,6 +3,7 @@
   <head>
    <title>Le snake de nous</title>
       <meta charset="utf-8"/>
+      <link rel="stylesheet" type="text/css" href="snake.css">
    <script type="text/javascript" src="newSnake.js"></script>
   </head>
   <body>
